--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true,
-    "allowJs": true
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   },
   "include": [
     "vite.config.ts",
-    "vitest.config.ts",
-    "tailwind.config.js",
-    "postcss.config.js"
+    "vitest.config.ts"
   ]
 } 
